# dedih-cicd-devsecops

./: .gitleaksignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py
tests/: test_main.py
