[project]
name = "dedih-cicd-devsecops"
version = "0.1.0"
description = "DEDIH 2.0 CI/CD és DevSecOps kurzus demo repo"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (line length, indentation, whitespace)
    "W",   # pycodestyle warnings
    "F",   # Pyflakes (undefined names, unused imports)
    "I",   # isort (import order)
    "B",   # flake8-bugbear (likely bugs, mutable defaults)
    "C4",  # flake8-comprehensions (cleaner list/dict/set comprehensions)
    "UP",  # pyupgrade (modern Python syntax)
    "N",   # pep8-naming (PEP 8 naming conventions)
    "SIM", # flake8-simplify
    "RET", # flake8-return
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
